Website translated into French

--- a/static/style.css
+++ b/static/style.css
@@ -63,6 +63,10 @@
     transition: 0.5s;
 }
 
+.nav-links ul li.language-switcher::after {
+    background: none;
+}
+
 .nav-links ul li:hover::after{
     width: 100%;
 }
