--- a/templates/blog.html
+++ b/templates/blog.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block title %}
-ComPrix - Blog
+{{ _('ComPrix - Blog') }}
 {% endblock %}
 
 {% block content %}
@@ -9,8 +9,8 @@ ComPrix - Blog
 
 <section class="hero">
     <div class="hero-text">
-        <h1>Blog</h1>
-        <!--<p>Lorem ipsum dolor sit amet</p>-->
+        <h1>{{ _('Blog') }}</h1>
+        <!-- <p>Lorem ipsum dolor sit amet</p> -->
     </div>
 </section>
 
@@ -24,95 +24,92 @@ ComPrix - Blog
                 <div class="image-container">
                     <img src="{{ url_for('static', filename='images/blog1_canva.png') }}">
                 </div>
-                <h2>The Future of Grocery Shopping: <br>Savings, Sustainability, and Convenience All in One!</h2>
-                <p>Grocery shopping has evolved, and in the digital age, it's not just about buying food anymore. It's about making informed choices, finding the best deals, and ensuring that our purchases have the least negative impact on the planet. Enter ComPrix, a revolutionary platform that's changing the way we think about online grocery shopping.</p>
-                <button class="read-more-mobile">Read More</button>
+                <h2>{{ _('The Future of Grocery Shopping: <br>Savings, Sustainability, and Convenience All in One!') }}</h2>
+                <p>{{ _('Grocery shopping has evolved, and in the digital age, it\'s not just about buying food anymore. It\'s about making informed choices, finding the best deals, and ensuring that our purchases have the least negative impact on the planet. Enter ComPrix, a revolutionary platform that\'s changing the way we think about online grocery shopping.') }}</p>
+                <button class="read-more-mobile">{{ _('Read More') }}</button>
                 <div class="hide-content-mobile">
-                    <h3>Why Smart Price Comparison is Essential</h3>       
-                    <p>Every day, hundreds of products go on sale, and promotions change constantly. The challenge? Keeping track of these fluctuations across different online supermarkets. ComPrix's smart comparison engine does the heavy lifting for you, ensuring that you're always getting the best value for your money, down to the delivery costs.</p>
-                    <h3>Sustainability is No Longer Optional</h3>
-                    <p>It's a known fact: Our planet needs us to make better choices. Whether it's opting for products with reduced packaging, supporting brands that follow sustainable practices, or simply reducing food waste by buying what we need, every little bit helps.</p>
-                    <p>ComPrix doesn't just stop at price comparison. We guide you towards sustainable choices, ensuring that your shopping habits are in line with the health of our planet.</p>
-                    <h3>The Convenience Factor</h3>
-                    <p>Remember the days when you'd write down a shopping list on a piece of paper and hope you didn't forget it at home? Those days are behind us. With ComPrix, your user-centric shopping list is at the heart of your experience. And what's more? We offer health-focused recipe suggestions based on the products in your list. So, not only do you shop smart, but you also eat smart.</p>
-                    <h3>Wrapping Up</h3>
-                    <p>The future of grocery shopping is here, and it's more than just adding items to a cart. It's about making decisions that are good for your wallet, your health, and the planet.</p>
-                    <p>Discover the smart, sustainable, and convenient way to shop with ComPrix. Your grocery journey reimagined.</p>
+                    <h3>{{ _('Why Smart Price Comparison is Essential') }}</h3>       
+                    <p>{{ _('Every day, hundreds of products go on sale, and promotions change constantly. The challenge? Keeping track of these fluctuations across different online supermarkets. ComPrix\'s smart comparison engine does the heavy lifting for you, ensuring that you\'re always getting the best value for your money, down to the delivery costs.') }}</p>
+                    <h3>{{ _('Sustainability is No Longer Optional') }}</h3>
+                    <p>{{ _('It\'s a known fact: Our planet needs us to make better choices. Whether it\'s opting for products with reduced packaging, supporting brands that follow sustainable practices, or simply reducing food waste by buying what we need, every little bit helps.') }}</p>
+                    <p>{{ _('ComPrix doesn\'t just stop at price comparison. We guide you towards sustainable choices, ensuring that your shopping habits are in line with the health of our planet.') }}</p>
+                    <h3>{{ _('The Convenience Factor') }}</h3>
+                    <p>{{ _('Remember the days when you\'d write down a shopping list on a piece of paper and hope you didn\'t forget it at home? Those days are behind us. With ComPrix, your user-centric shopping list is at the heart of your experience. And what\'s more? We offer health-focused recipe suggestions based on the products in your list. So, not only do you shop smart, but you also eat smart.') }}</p>
+                    <h3>{{ _('Wrapping Up') }}</h3>
+                    <p>{{ _('The future of grocery shopping is here, and it\'s more than just adding items to a cart. It\'s about making decisions that are good for your wallet, your health, and the planet.') }}</p>
+                    <p>{{ _('Discover the smart, sustainable, and convenient way to shop with ComPrix. Your grocery journey reimagined.') }}</p>
                 </div>
             </div>
-            
 
             <!-- Second Blog Post -->
             <div class="blog-post">
                 <div class="image-container">
                     <img src="{{ url_for('static', filename='images/blog2_canva.png') }}">
                 </div>
-                <h2>Making Healthy Choices: The Power of Informed Online Grocery Shopping</h2>
-                <p>In our fast-paced world, maintaining a balanced diet and making health-conscious decisions can sometimes feel like a luxury. Between juggling work, family, and personal time, who has the hours to analyze every product on the grocery store shelf? This is where online grocery shopping, combined with the right tools, can be a game-changer.</p>
-                <button class="read-more-mobile">Read More</button>
+                <h2>{{ _('Making Healthy Choices: The Power of Informed Online Grocery Shopping') }}</h2>
+                <p>{{ _('In our fast-paced world, maintaining a balanced diet and making health-conscious decisions can sometimes feel like a luxury. Between juggling work, family, and personal time, who has the hours to analyze every product on the grocery store shelf? This is where online grocery shopping, combined with the right tools, can be a game-changer.') }}</p>
+                <button class="read-more-mobile">{{ _('Read More') }}</button>
                 <div class="hide-content-mobile">
-                    <h3>The Rise of Online Grocery Shopping</h3>
-                    <p>The recent years have seen a massive surge in online grocery shopping. The reasons are many: convenience, the sheer variety, and often, better deals. But there's more to it. Online platforms provide an opportunity to research, compare, and make informed decisions about what goes into our shopping baskets and, ultimately, our bodies.</p>
-                    <h3>Health at the Forefront with ComPrix</h3>
-                    <p>At ComPrix, we understand the importance of health. That's why, in addition to offering a smart price comparison, we guide our users towards healthier food choices. Wondering how?</p>
-                    <p>1. Nutritional Information at Your Fingertips: Instead of squinting at labels in the store, get a clear view of the nutritional value of products, allowing you to choose items that align with your dietary needs.</p>
-                    <p>2. Recipe Suggestions: Not sure how to incorporate quinoa into your meals? Or looking for a low-sodium alternative for your favorite dish? Our health-focused recipe suggestions can inspire you to try out new, nutritious meals.</p>
-                    <p>3. Sustainable Choices: Health isn't just about what we eat but also about the environment we live in. ComPrix promotes sustainable product options, ensuring that your health and the planet's health go hand in hand.</p>
-                    <h3>Harnessing the Power of Informed Shopping</h3>
-                    <p>With ComPrix, you're no longer shopping in the dark. You have the information, the tools, and the suggestions right at your fingertips, ensuring that every grocery delivery at your doorstep aligns with your health goals.</p>
-                    <h3>In Conclusion</h3>
-                    <p>Healthy living is no longer just a trend—it's a necessity. And with the evolving landscape of online grocery shopping, tools like ComPrix make it easier than ever to make the right choices. Dive into a world where health, convenience, and sustainability meet. Dive into the world of ComPrix.</p>
+                    <h3>{{ _('The Rise of Online Grocery Shopping') }}</h3>
+                    <p>{{ _('The recent years have seen a massive surge in online grocery shopping. The reasons are many: convenience, the sheer variety, and often, better deals. But there\'s more to it. Online platforms provide an opportunity to research, compare, and make informed decisions about what goes into our shopping baskets and, ultimately, our bodies.') }}</p>
+                    <h3>{{ _('Health at the Forefront with ComPrix') }}</h3>
+                    <p>{{ _('At ComPrix, we understand the importance of health. That\'s why, in addition to offering a smart price comparison, we guide our users towards healthier food choices. Wondering how?') }}</p>
+                    <p>{{ _('1. Nutritional Information at Your Fingertips: Instead of squinting at labels in the store, get a clear view of the nutritional value of products, allowing you to choose items that align with your dietary needs.') }}</p>
+                    <p>{{ _('2. Recipe Suggestions: Not sure how to incorporate quinoa into your meals? Or looking for a low-sodium alternative for your favorite dish? Our health-focused recipe suggestions can inspire you to try out new, nutritious meals.') }}</p>
+                    <p>{{ _('3. Sustainable Choices: Health isn\'t just about what we eat but also about the environment we live in. ComPrix promotes sustainable product options, ensuring that your health and the planet\'s health go hand in hand.') }}</p>
+                    <h3>{{ _('Harnessing the Power of Informed Shopping') }}</h3>
+                    <p>{{ _('With ComPrix, you\'re no longer shopping in the dark. You have the information, the tools, and the suggestions right at your fingertips, ensuring that every grocery delivery at your doorstep aligns with your health goals.') }}</p>
+                    <h3>{{ _('In Conclusion') }}</h3>
+                    <p>{{ _('Healthy living is no longer just a trend—it\'s a necessity. And with the evolving landscape of online grocery shopping, tools like ComPrix make it easier than ever to make the right choices. Dive into a world where health, convenience, and sustainability meet. Dive into the world of ComPrix.') }}</p>
                 </div>
-            </div>         
+            </div>
+
 
             <!-- Third Blog Post -->
             <div class="blog-post">
                 <div class="image-container">
                     <img src="{{ url_for('static', filename='images/blog3_canva.png') }}">
                 </div>
-                <h2>Grocery Shopping in the Age of Sustainability: How ComPrix Guides Your Green Journey</h2>
-                <p>From reusable bags to organic produce, sustainability in grocery shopping is no longer a niche – it's mainstream. Yet, as online grocery shopping gains traction, how do we ensure that our digital baskets are as green as our real-life canvas totes? Enter ComPrix, your companion in sustainable shopping.</p>
-                <button class="read-more-mobile">Read More</button>
+                <h2>{{ _('Grocery Shopping in the Age of Sustainability: How ComPrix Guides Your Green Journey') }}</h2>
+                <p>{{ _('From reusable bags to organic produce, sustainability in grocery shopping is no longer a niche – it\'s mainstream. Yet, as online grocery shopping gains traction, how do we ensure that our digital baskets are as green as our real-life canvas totes? Enter ComPrix, your companion in sustainable shopping.') }}</p>
+                <button class="read-more-mobile">{{ _('Read More') }}</button>
                 <div class="hide-content-mobile">
-                    <h3>The Green Wave in Online Shopping</h3>
-                    <p>Sustainability isn't just a buzzword. It's an urgent need, especially given the challenges our planet currently faces. As consumers, our choices have a massive impact, and online shopping platforms have recognized this. There's an increasing demand for transparency – not just in prices, but in product origins, ethical practices, and environmental footprints.</p>
-                    <h3>ComPrix: Not Just Smart Prices, But Smart Choices</h3>
-                    <p>Here's how ComPrix becomes an ally in your sustainable shopping journey:</p>
-                    <p>1. Eco Badges: At a glance, see which products are eco-friendly. Our sustainability badges highlight items that are either locally sourced, have reduced carbon footprints, or come in minimal packaging.</p>
-                    <p>2. Organic and Fair Trade Options: ComPrix doesn't just show you the cheapest items, but also the ones that matter for our planet and its inhabitants. From organic grains to fair trade chocolates, make choices that reflect your values.</p>
-                    <p>3. Sustainable Recipe Recommendations: Ever wondered how to use those seasonal vegetables? Our recipe suggestions not only take into account health but also seasonality, promoting local produce and reducing carbon footprints.</p>
-                    <h3>Beyond the Basket: The Bigger Picture</h3>
-                    <p>Our commitment doesn't stop at suggestions. We continuously collaborate with grocery partners to encourage and amplify their sustainability efforts, ensuring that as the ComPrix family grows, so does our positive impact on the planet.</p>
-                    <h3>In Conclusion</h3>
-                    <p>The green wave is here to stay, and online grocery shopping is no exception. With ComPrix, you don't just save money, but also ensure that every click, every addition to the basket, aligns with the greater good. Join us in redefining grocery shopping for a sustainable future.</p>
+                    <h3>{{ _('The Green Wave in Online Shopping') }}</h3>
+                    <p>{{ _('Sustainability isn\'t just a buzzword. It\'s an urgent need, especially given the challenges our planet currently faces. As consumers, our choices have a massive impact, and online shopping platforms have recognized this. There\'s an increasing demand for transparency – not just in prices, but in product origins, ethical practices, and environmental footprints.') }}</p>
+                    <h3>{{ _('ComPrix: Not Just Smart Prices, But Smart Choices') }}</h3>
+                    <p>{{ _('Here\'s how ComPrix becomes an ally in your sustainable shopping journey:') }}</p>
+                    <p>{{ _('1. Eco Badges: At a glance, see which products are eco-friendly. Our sustainability badges highlight items that are either locally sourced, have reduced carbon footprints, or come in minimal packaging.') }}</p>
+                    <p>{{ _('2. Organic and Fair Trade Options: ComPrix doesn\'t just show you the cheapest items, but also the ones that matter for our planet and its inhabitants. From organic grains to fair trade chocolates, make choices that reflect your values.') }}</p>
+                    <p>{{ _('3. Sustainable Recipe Recommendations: Ever wondered how to use those seasonal vegetables? Our recipe suggestions not only take into account health but also seasonality, promoting local produce and reducing carbon footprints.') }}</p>
+                    <h3>{{ _('Beyond the Basket: The Bigger Picture') }}</h3>
+                    <p>{{ _('Our commitment doesn\'t stop at suggestions. We continuously collaborate with grocery partners to encourage and amplify their sustainability efforts, ensuring that as the ComPrix family grows, so does our positive impact on the planet.') }}</p>
+                    <h3>{{ _('In Conclusion') }}</h3>
+                    <p>{{ _('The green wave is here to stay, and online grocery shopping is no exception. With ComPrix, you don\'t just save money, but also ensure that every click, every addition to the basket, aligns with the greater good. Join us in redefining grocery shopping for a sustainable future.') }}</p>
                 </div>
             </div>
-            
-
         </div>
 
         <!-- Right Side Content -->
         <div class="blog-right">
-            <h3>Post Categories</h3>
+            <h3>{{ _('Post Categories') }}</h3>
             <!-- Categories go here -->
             <div>
-                <span>Smart shopping</span>
+                <span>{{ _('Smart shopping') }}</span>
                 <span>1</span>
             </div>
             <div>
-                <span>Sustainability</span>
+                <span>{{ _('Sustainability') }}</span>
                 <span>1</span>
             </div>
             <div>
-                <span>Healthy choices</span>
+                <span>{{ _('Healthy choices') }}</span>
                 <span>1</span>
             </div>
         </div>
-
     </div>  <!-- End of .row -->
 </section>
-
 </div>  <!-- End of .blog -->
+
 
 <!----JavaScript for toggle menu---->
 <script>
